--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
-  <head>
-    <title>Angular 2 QuickStart</title>
+<head>
+  <title>TCG</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-    <link rel="stylesheet" href="styles.css">
-    <!-- 1. Load libraries -->
-     <!-- Polyfill(s) for older browsers -->
+    <link rel="stylesheet" href="app/main.css"/>
+  <!-- 1. Load libraries -->
+  <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
@@ -15,11 +15,13 @@
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
-      System.import('app').catch(function(err){ console.error(err); });
+      System.import('app').catch(function (err) {
+        console.error(err);
+      });
     </script>
-  </head>
-  <!-- 3. Display the application -->
-  <body>
-    <my-app>Loading...</my-app>
-  </body>
+</head>
+<!-- 3. Display the application -->
+<body>
+  <tcg-app>Loading...</tcg-app>
+</body>
 </html>
